MarkCommand: support multiple indices